--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,56 @@
-# version: "3.9"
-
-# services:
-#   backend:
-#     build:
-#       context: ./backend
-#       dockerfile: Dockerfile
-#     ports:
-#       - "8000:8000"
-#     environment:
-#       OPENAI_API_KEY: "${OPENAI_API_KEY}" 
-#     volumes:
-#       - ./backend:/app
-#       - ./backend/chroma_db:/app/chroma_db
-
-#   frontend:
-#     build:
-#       context: ./frontend
-#       dockerfile: Dockerfile
-#     ports:
-#       - "3000:3000"
-#     volumes:
-#       - ./frontend:/app
-#       - /app/node_modules
-#     stdin_open: true
-#     tty: true
-
-version: '3.8'
+version: "3.9"
 
 services:
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    environment:
+      OPENAI_API_KEY: "${OPENAI_API_KEY}" 
+      MONGODB_URL: "${MONGODB_URL}"
+      DB_NAME: "${DB_NAME}"
+      COLLECTION_NAME: "${COLLECTION_NAME}"
+      MODEL_NAME: "${MODEL_NAME}"
+    volumes:
+      - ./backend:/app
+      - ./backend/chroma_db:/app/chroma_db
+    depends_on:
+      mongodb:
+        condition: service_healthy
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    stdin_open: true
+    tty: true
+    depends_on:
+      backend:
+        condition: service_started
+
   mongodb:
     image: mongo:6.0
     container_name: mongodb
     restart: always
     ports:
-      - "27017:27017"  # Map MongoDB's default port to your host
+      - "27017:27017" 
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_USERNAME: "${MONGO_INITDB_ROOT_USERNAME}"
+      MONGO_INITDB_ROOT_PASSWORD: "${MONGO_INITDB_ROOT_PASSWORD}"
     volumes:
       - ./mongo_data:/data/db
-    
+    healthcheck:
+      test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   mongo_data:
