--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -18,4 +18,4 @@ EXPOSE 8000
 
 
 # Run the FastAPI application
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["python", "run.py"]
