--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,27 +13,27 @@ services:
       DB_NAME: "${DB_NAME}"
       COLLECTION_NAME: "${COLLECTION_NAME}"
       MODEL_NAME: "${MODEL_NAME}"
-#    volumes:
-#      - ./backend:/app
-#      - ./backend/chroma_db:/app/chroma_db
+    volumes:
+      - ./backend:/app
+      - ./backend/chroma_db:/app/chroma_db
     depends_on:
       mongodb:
         condition: service_healthy
 
-#  frontend:
-#    build:
-#     context: ./frontend
-#      dockerfile: Dockerfile
-#    ports:
-#      - "3000:3000"
-#    volumes:
-#      - ./frontend:/app
-#      - /app/node_modules
-#    stdin_open: true
-#    tty: true
-#    depends_on:
-#      backend:
-#        condition: service_started
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    stdin_open: true
+    tty: true
+    depends_on:
+      backend:
+        condition: service_started
 
   mongodb:
     image: mongo:6.0
